# video-downloader

./: .gitignore  CMakeLists.txt  README.md  gui.py
include/: DownloadManager.h  Downloader.h  ProgressTracker.h  ResumeState.h  ThreadPool.h
src/: DownloadManager.cpp  Downloader.cpp  ProgressTracker.cpp  ResumeState.cpp  ThreadPool.cpp  main.cpp
